# Student-Achievement-Management-System-CMake

./: .gitignore  CMakeLists.txt  README.md  app.manifest
Student-Achievement-Management-System/: CMakeLists.txt
Student-Achievement-Management-System/src/: list.c  list.h  main.c  student.c  student.h
include/: tui.h  ui.h
src/: main.c  student.c  tui.c
